fix: restore text alignment for hero title

--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -27,8 +27,7 @@
 
 	.hero__title {
 		letter-spacing: -0.144px;
-
-		/* text-align: center; */
+		text-align: center;
 	}
 
 	.hero__subtitle {
